# hyperSpec-Tasks

./: README.md
easy_task/: README.md  easy_task.R
hard_task/: README.md
hard_task/sparsematrixprocessing/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE
hard_task/sparsematrixprocessing/R/: extendr-wrappers.R
hard_task/sparsematrixprocessing/src/: Makevars.in  Makevars.win.in  entrypoint.c  sparsematrixprocessing-win.def
hard_task/sparsematrixprocessing/src/rust/: Cargo.toml
hard_task/sparsematrixprocessing/src/rust/src/: lib.rs
medium_task/: README.md  medium_task.R
medium_task/matrixrowsum/: .RData  .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  NAMESPACE
medium_task/matrixrowsum/R/: extendr-wrappers.R  matrixrowsum.R
medium_task/matrixrowsum/man/: row_sums_rust.Rd
medium_task/matrixrowsum/src/: Makevars.in  Makevars.win.in  entrypoint.c  matrixrowsum-win.def
medium_task/matrixrowsum/src/rust/: Cargo.toml
medium_task/matrixrowsum/src/rust/src/: lib.rs
medium_task/matrixrowsum/tests/: testthat.R
medium_task/matrixrowsum/tests/testthat/: test-row-sums.R
