[package]
name = 'matrixrowsum'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'matrixrowsum'

[dependencies]
extendr-api = '*'
faer = "0.19"

[profile.release]
opt-level = 3
lto = false  # Changed from true to false

[profile.dev]
lto = false  # Add this to disable LTO in dev builds too